# arvore-gene

./: .gitignore  Arvore.cpp  Arvore.h  CMakeLists.txt  CMakeLists_win.txt  Data.cpp  Data.h  Opcao.h  Pessoa.cpp  Pessoa.h  README.md  Regex.cpp  Regex.h  arvore_teste.csv  compilar&rodar.bat  compilarerodar.sh  compile&run.bat  main.cpp  melhorquecmake.sh  melhorquecmakeFUNCTIONAATENOWINDOWS.sh  test.cpp  test.sh  util.cpp  util.h
include/: Arvore.h  Arvore.hpp  Data.h  Menu.h  Pessoa.h  util.h
src/: Arvore.cpp  Data.cpp  Menu.cpp  Pessoa.cpp  Regex.cpp  main.cpp  util.cpp
tests/: cores.cpp  pessoas.cpp
